--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "version": "1.2.0",
   
   "action": {
-    "default_popup": "survey.html",
+    "default_popup": "popup.html",
     "default_icon": "icon.png"
   },
 
